Fix: overlap tab borders in ManageWhitelistDialog

--- a/src/modules/dashboard/components/Dialogs/ManageWhitelistDialog/ManageWhitelistDialogForm.css
+++ b/src/modules/dashboard/components/Dialogs/ManageWhitelistDialog/ManageWhitelistDialogForm.css
@@ -18,6 +18,8 @@
   display: flex;
   height: 100%;
   width: 100%;
+  position: relative;
+  bottom: -1px; /* HACK to overlap the tabs' bottom borders */
 }
 
 .toggleContainer {
